# FiniteElements

./: CMakeLists.txt  GalerkinMethod.cpp  GalerkinMethod.h  RitzMethod.cpp  RitzMethod.h  functions.cpp  functions.h  main.cpp  mainGalerkin.cpp  mainRitz.cpp  test.cpp  test.h
